fix z-index

--- a/frontend/css/activites.css
+++ b/frontend/css/activites.css
@@ -27,6 +27,7 @@ em {
   color: #9b1c58;
   padding-bottom: 10px;
   box-shadow: 0px 0px 10px 0px black;
+  z-index: 5;
 }
 .header__nav {
   padding: 0 100px;
