--- a/frontend/sass/global/header.sass
+++ b/frontend/sass/global/header.sass
@@ -5,6 +5,7 @@
     color: #9b1c58
     padding-bottom: 10px
     box-shadow: 0px 0px 10px 0px black
+    z-index: 5
     &__nav
         padding: 0 100px
         max-width: 1240px
