--- a/frontend/sass/pages/photo.sass
+++ b/frontend/sass/pages/photo.sass
@@ -36,6 +36,7 @@
         transform: scale(1.05)
 
 .modal
+    z-index: 10
     background-color: rgba(0, 0, 0, 0.5)
     display: flex
     justify-content: center
